--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^1.0.0",
+    "jquery": "^3.5.1",
+    "jsonp": "^0.2.1",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "react": "^16.13.1",
